Implemented changes suggested by SonarQube